# gm3p

./: .gitignore  CMakeLists.txt  README.md
include/: gm3p.hpp  gm3p_int.hpp
src/: gm3p_int.cpp
testapp/: CMakeLists.txt  main.cpp
